tests/paczka1/small_fuzzy/66105036.err
Error in line 5: Jsd54p A651 80,7
Error in line 6: O2Ql S80 75,2
Error in line 15: tC5JQnpMh A651 32,96
